Refactor http utils: always return error, no writing to resp; pagination reps has metadata field with total, offset etc
